--- a/GirdGame/Assembly-CSharp.csproj
+++ b/GirdGame/Assembly-CSharp.csproj
@@ -53,6 +53,10 @@
      <Compile Include="Assets\Scripts\Global\Globals.cs" />
      <Compile Include="Assets\Scripts\PieceSystem\Piece.cs" />
      <Compile Include="Assets\Scripts\PieceSystem\IPiece.cs" />
+     <Compile Include="Assets\Scripts\GameState\MenuState.cs" />
+     <Compile Include="Assets\Scripts\GameState\GameState.cs" />
+     <Compile Include="Assets\Scripts\GameState\GameOverState.cs" />
+     <Compile Include="Assets\Scripts\GameState\BaseState.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
