--- a/GirdGame/Assembly-CSharp.csproj
+++ b/GirdGame/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
      <Compile Include="Assets\Scripts\GameState\GameState.cs" />
      <Compile Include="Assets\Scripts\GameState\GameOverState.cs" />
      <Compile Include="Assets\Scripts\GameState\BaseState.cs" />
+     <Compile Include="Assets\Scripts\PieceSystem\DiscoPiece.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
