--- a/GirdGame/Assembly-CSharp.csproj
+++ b/GirdGame/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
      <Compile Include="Assets\Scripts\GameState\MenuState.cs" />
      <Compile Include="Assets\Scripts\PieceSystem\Piece.cs" />
      <Compile Include="Assets\Scripts\PieceSystem\IPiece.cs" />
+     <Compile Include="Assets\Scripts\PieceSystem\BombPiece.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
